// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Array [
  "$",
  "C",
  "F",
  "I",
  "K",
  "PLACEHOLDER",
  "T",
  "__",
  "add",
  "addIndex",
  "all",
  "allPass",
  "always",
  "and",
  "any",
  "anyPass",
  "ap",
  "apply",
  "binarySideEffect",
  "bind",
  "both",
  "box",
  "call",
  "chain",
  "complement",
  "concat",
  "cond",
  "configuration",
  "constant",
  "curry",
  "curryN",
  "custom",
  "def",
  "difference",
  "divide",
  "either",
  "entries",
  "equals",
  "every",
  "filter",
  "first",
  "flatten",
  "flip",
  "forEach",
  "freeze",
  "fromEntries",
  "fromPairs",
  "gt",
  "gte",
  "identity",
  "ifElse",
  "includes",
  "inspect",
  "is",
  "isArray",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isObject",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "j2",
  "jam",
  "join",
  "keys",
  "last",
  "length",
  "lt",
  "lte",
  "map",
  "mash",
  "memoizeWith",
  "merge",
  "mergeAll",
  "mergeRight",
  "multiply",
  "not",
  "nth",
  "or",
  "path",
  "pathEq",
  "pathIs",
  "pathOr",
  "pathSatisfies",
  "pipe",
  "prop",
  "propEq",
  "propIs",
  "propOr",
  "propSatisfies",
  "range",
  "reduce",
  "reject",
  "round",
  "sideEffect",
  "sideEffect2",
  "slice",
  "smash",
  "smooth",
  "some",
  "sort",
  "split",
  "subtract",
  "symmetricDifference",
  "temper",
  "toJSON",
  "toLower",
  "toPairs",
  "toUpper",
  "trace",
  "union",
  "uniq",
  "version",
  "when",
]
`;

exports[`comparisons f-utility vs. ramda 1`] = `
Array [
  "$",
  "C",
  "I",
  "K",
  "PLACEHOLDER",
  "binarySideEffect",
  "box",
  "configuration",
  "constant",
  "custom",
  "def",
  "entries",
  "every",
  "first",
  "freeze",
  "fromEntries",
  "inspect",
  "isArray",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isObject",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "j2",
  "jam",
  "mash",
  "pathIs",
  "round",
  "sideEffect",
  "sideEffect2",
  "smash",
  "smooth",
  "some",
  "temper",
  "toJSON",
  "trace",
  "version",
]
`;

exports[`comparisons ramda vs. f-utility 1`] = `
Array [
  "adjust",
  "aperture",
  "append",
  "applySpec",
  "applyTo",
  "ascend",
  "assoc",
  "assocPath",
  "binary",
  "clamp",
  "clone",
  "comparator",
  "compose",
  "composeK",
  "composeP",
  "composeWith",
  "construct",
  "constructN",
  "contains",
  "converge",
  "countBy",
  "dec",
  "defaultTo",
  "descend",
  "differenceWith",
  "dissoc",
  "dissocPath",
  "drop",
  "dropLast",
  "dropLastWhile",
  "dropRepeats",
  "dropRepeatsWith",
  "dropWhile",
  "empty",
  "endsWith",
  "eqBy",
  "eqProps",
  "evolve",
  "find",
  "findIndex",
  "findLast",
  "findLastIndex",
  "forEachObjIndexed",
  "groupBy",
  "groupWith",
  "has",
  "hasIn",
  "hasPath",
  "head",
  "identical",
  "inc",
  "indexBy",
  "indexOf",
  "init",
  "innerJoin",
  "insert",
  "insertAll",
  "intersection",
  "intersperse",
  "into",
  "invert",
  "invertObj",
  "invoker",
  "isEmpty",
  "isNil",
  "juxt",
  "keysIn",
  "lastIndexOf",
  "lens",
  "lensIndex",
  "lensPath",
  "lensProp",
  "lift",
  "liftN",
  "mapAccum",
  "mapAccumRight",
  "mapObjIndexed",
  "match",
  "mathMod",
  "max",
  "maxBy",
  "mean",
  "median",
  "mergeDeepLeft",
  "mergeDeepRight",
  "mergeDeepWith",
  "mergeDeepWithKey",
  "mergeLeft",
  "mergeWith",
  "mergeWithKey",
  "min",
  "minBy",
  "modulo",
  "move",
  "nAry",
  "negate",
  "none",
  "nthArg",
  "o",
  "objOf",
  "of",
  "omit",
  "once",
  "otherwise",
  "over",
  "pair",
  "partial",
  "partialRight",
  "partition",
  "pick",
  "pickAll",
  "pickBy",
  "pipeK",
  "pipeP",
  "pipeWith",
  "pluck",
  "prepend",
  "product",
  "project",
  "props",
  "reduceBy",
  "reduceRight",
  "reduceWhile",
  "reduced",
  "remove",
  "repeat",
  "replace",
  "reverse",
  "scan",
  "sequence",
  "set",
  "sortBy",
  "sortWith",
  "splitAt",
  "splitEvery",
  "splitWhen",
  "startsWith",
  "sum",
  "symmetricDifferenceWith",
  "tail",
  "take",
  "takeLast",
  "takeLastWhile",
  "takeWhile",
  "tap",
  "test",
  "then",
  "times",
  "toPairsIn",
  "toString",
  "transduce",
  "transpose",
  "traverse",
  "trim",
  "tryCatch",
  "type",
  "unapply",
  "unary",
  "uncurryN",
  "unfold",
  "unionWith",
  "uniqBy",
  "uniqWith",
  "unless",
  "unnest",
  "until",
  "update",
  "useWith",
  "values",
  "valuesIn",
  "view",
  "where",
  "whereEq",
  "without",
  "xprod",
  "zip",
  "zipObj",
  "zipWith",
  "thunkify",
]
`;

exports[`comparisons v3 vs. v4 1`] = `Array []`;

exports[`comparisons v4 vs. v3 1`] = `
Array [
  "$",
  "C",
  "F",
  "I",
  "K",
  "PLACEHOLDER",
  "T",
  "__",
  "add",
  "addIndex",
  "all",
  "allPass",
  "always",
  "and",
  "any",
  "anyPass",
  "ap",
  "apply",
  "binarySideEffect",
  "bind",
  "both",
  "box",
  "call",
  "chain",
  "complement",
  "concat",
  "cond",
  "configuration",
  "constant",
  "curry",
  "curryN",
  "custom",
  "def",
  "difference",
  "divide",
  "either",
  "entries",
  "equals",
  "every",
  "filter",
  "first",
  "flatten",
  "flip",
  "forEach",
  "freeze",
  "fromEntries",
  "fromPairs",
  "gt",
  "gte",
  "identity",
  "ifElse",
  "includes",
  "inspect",
  "is",
  "isArray",
  "isBoolean",
  "isFunction",
  "isNumber",
  "isObject",
  "isRawObject",
  "isString",
  "isSymbol",
  "isUndefined",
  "isUnmatched",
  "j2",
  "jam",
  "join",
  "keys",
  "last",
  "length",
  "lt",
  "lte",
  "map",
  "mash",
  "memoizeWith",
  "merge",
  "mergeAll",
  "mergeRight",
  "multiply",
  "not",
  "nth",
  "or",
  "path",
  "pathEq",
  "pathIs",
  "pathOr",
  "pathSatisfies",
  "pipe",
  "prop",
  "propEq",
  "propIs",
  "propOr",
  "propSatisfies",
  "range",
  "reduce",
  "reject",
  "round",
  "sideEffect",
  "sideEffect2",
  "slice",
  "smash",
  "smooth",
  "some",
  "sort",
  "split",
  "subtract",
  "symmetricDifference",
  "temper",
  "toJSON",
  "toLower",
  "toPairs",
  "toUpper",
  "trace",
  "union",
  "uniq",
  "version",
  "when",
]
`;
